<resources>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="app_name">Otlob</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="register_">Register !</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account">Already have an account  </string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">1054384188343469</string>
    <string name="fb_login_protocol_scheme">fb1054384188343469</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="sandwich">Sandwich</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="choose_size">Choose Size</string>
    <string name="_0_egp">0 EGP</string>
    <string name="purchase">Purchase</string>
    <string name="you_ll_pay">You\'ll pay</string>
    <string name="add_more">Add More</string>
    <string name="order_name">Order Name</string>
    <string name="large">Large</string>
    <string name="ahmed_baheg">Ahmed Baheg</string>
    <string name="ahmed_bahig77_gmail_com">ahmed.bahig77@gmail.com</string>
    

    <string name="text">Light Mode</string>
    <string name="phone">Phone</string>
    <string name="_01159052922">01159052922</string>
</resources>