<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item"
        tools:context=".fragment.Item">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/tv_border_white"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/tv_border_orange"
            android:paddingLeft="100dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/_0_egp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_img_item"
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:orientation="vertical"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_price">

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/choose_size"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cv_img_item"
            app:layout_constraintTop_toTopOf="@id/cv_img_item"
            app:layout_constraintBottom_toBottomOf="@id/cv_img_item">

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_item_left"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_img_item"
            app:layout_constraintTop_toTopOf="@id/cv_img_item"
            app:layout_constraintBottom_toBottomOf="@id/cv_img_item">

            <ImageButton
                android:id="@+id/btn_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_item_right"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/tv_border_white"
            android:elevation="10dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="lollipop" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>